Hot deal section and flower instagram section added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,32 @@
         </div>
     </header>
     <main>
+        <!-- Hot Deal Section Start -->
+        <section class="hot-deal">
+            <div class="hot-deal-content">
+                <h2 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span class="hot-deal-off">Off</span></h2>
+                <p class="hot-deal-brief">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <img class="hot-deal-pic" src="images/pngwing 8.png" alt="">
+        </section>
+        <!-- Hot Deal Section End -->
 
+        <!-- flower instagram Section start -->
+        <section class="flower-instagram">
+            <h2 class="flower-instagram-title">Instagram</h2>
+            <p class="flower-instagram-breif">It is a long established fact that a reader will be distracted by the
+                readable content of a page when
+                looking at its layout.</p>
+            <div class="instagram-flowers">
+                <img class="insta-flower" src="images/Flower 01.png" alt="">
+                <img class="insta-flower" src="images/Rectangle 4.png" alt="">
+                <img class="insta-flower" src="images/Rectangle 5.png" alt="">
+                <img class="insta-flower" src="images/Rectangle 6.png" alt="">
+            </div>
+        </section>
+        <!-- flower instagram Section End -->
     </main>
     <footer>
 
