--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
         </div>
     </header>
     <main>
+        <!-- Featured Flowers Section Start -->
+        <section class="featured-flower">
+            <h2 class="section-title">Our Featured Flowers</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+            <div class="featured-flowers">
+                <div class="featured-flower">
+                    <img src="images/pngwing 6.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+                <div class="featured-flower">
+                    <img src="images/pngwing 5.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+                <div class="featured-flower">
+                    <img src="images/pngwing 7.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- Featured Flowers Section End -->
+
         <!-- Hot Deal Section Start -->
         <section class="hot-deal">
             <div class="hot-deal-content">
@@ -59,9 +82,26 @@
             </div>
         </section>
         <!-- flower instagram Section End -->
+
+
+        <!-- Latest deals Section start -->
+        <section class="latest-deals">
+            <div class="latest-deals-content">
+                <h2 class="latest-deals-title">Get The Latest Deals</h2>
+                <p class="latest-deals-coupon">$30 coupon for first shopping</p>
+                <form class="Subscribe-form">
+                    <input class="Subscribe-mail" type="email" placeholder="Enter your email here..." name="" id="">
+                    <input class="btn-primary" type="submit" value="Subscribe">
+                </form>
+            </div>
+        </section>
+        <!-- Latest deals Section End -->
     </main>
     <footer>
-
+        <h2 class="footer-title">Flower<span class="shop">Shop</span></h2>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at its layout.</p>
+        <p>&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
     </footer>
 </body>
 
