Footer section, featured flowers customize

--- a/index.html
+++ b/index.html
@@ -34,21 +34,27 @@
     </header>
     <main>
         <!-- Featured Flowers Section Start -->
-        <section class="featured-flower">
+        <section class="featured-flowers">
             <h2 class="section-title">Our Featured Flowers</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.</p>
-            <div class="featured-flowers">
-                <div class="featured-flower">
-                    <img src="images/pngwing 6.png" alt="">
+            <div class="featured-flowers-gallery">
+                <div class="featured-flower-item">
+                    <div class="featured-flower">
+                        <img src="images/pngwing 6.png" alt="">
+                    </div>
                     <p>Pink Flower Tree</p>
                 </div>
-                <div class="featured-flower">
-                    <img src="images/pngwing 5.png" alt="">
+                <div class="featured-flower-item">
+                    <div class="featured-flower">
+                        <img src="images/pngwing 5.png" alt="">
+                    </div>
                     <p>Pink Flower Tree</p>
                 </div>
-                <div class="featured-flower">
-                    <img src="images/pngwing 7.png" alt="">
+                <div class="featured-flower-item">
+                    <div class="featured-flower">
+                        <img src="images/pngwing 7.png" alt="">
+                    </div>
                     <p>Pink Flower Tree</p>
                 </div>
             </div>
@@ -99,9 +105,9 @@
     </main>
     <footer>
         <h2 class="footer-title">Flower<span class="shop">Shop</span></h2>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
-            at its layout.</p>
-        <p>&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout.</p>
+        <p class="copyright">&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
     </footer>
 </body>
 
