Flower Experts Section added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,38 @@
         </section>
         <!-- flower instagram Section End -->
 
+        <!-- Flower Experts Section Start -->
+        <section class="flower-experts">
+            <h2 class="section-title">Flower Experts</h2>
+            <p class="experts-brief">A perfect blend of creativity, energy, communication, happiness and love. Let us
+                arrange a smile for you.
+            </p>
+            <div class="flower-experts-content">
+                <div class="">
+                    <img src="images/ShipaBegum.jpg" alt="">
+                    <h4>Shipa Begum</h4>
+                    <p>Biologist</p>
+                </div>
+                <div class="">
+                    <img src="images/abdulahad.jpg" alt="">
+                    <h4>Abdul Ahad</h4>
+                    <p>Photographer</p>
+                </div>
+                <div class="">
+                    <img src="images/RitaBegum.jpg" alt="">
+                    <h4>Rita Begum</h4>
+                    <p>Florist</p>
+                </div>
+                <div class="">
+                    <img src="images/JumaBegum.jpg" alt="">
+                    <h4>Juma Begum</h4>
+                    <p>Founder</p>
+                </div>
+            </div>
+        </section>
+        <!-- Flower Experts Section End -->
+
+
 
         <!-- Latest deals Section start -->
         <section class="latest-deals">
