--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <!-- Featured Flowers Section Start -->
         <section class="featured-flowers">
             <h2 class="section-title">Our Featured Flowers</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            <p class="featured-brief">It is a long established fact that a reader will be distracted by the readable
+                content of a page when
                 looking at its layout.</p>
             <div class="featured-flowers-gallery">
                 <div class="featured-flower-item">
